[build-system]
requires = ["scikit-build-core", "setuptools", "setuptools-scm"]
build-backend = "scikit_build_core.setuptools.build_meta"

# enable dynamic version based on git tags
[tool.setuptools_scm]
# Configure to align with the one of meta.yaml
fallback_version = "0.0.0.dev0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project]
name = "alinea.caribu"
authors = [
  { name = "Christian Fournier"},
  { name = "Michaël Chelle"},
  { name = "Christophe Pradal"},
]
description = "Eco-physiological model of light interception by plants"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["openalea", "FSPM", "light"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version", "readme"]
dependencies = [
  "path"
]

[project.optional-dependencies]
test = ["pytest"]
doc = [
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "nbsphinx",
]

[project.urls]
Homepage = "https://openalea.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea-incubator/caribu/issues"
Discussions = "https://github.com/openalea-incubator/caribu/discussions"
Changelog = "https://github.com/openalea-incubator/caribu/releases"

[project.entry-points."wralea"]
"alinea.caribu" = "alinea.caribu_wralea"

[tool.scikit-build]
build-dir = "./build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "WARNING"
build.verbose = true

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["alinea.*"]

[tool.scikit-build.cmake]
build-type = "Release"
source-dir = "."

[tool.scikit-build.cmake.windows]
generator = "MinGW Makefiles"
